@@ -32,6 +32,7 @@ Add two new Page Wizards to more easily create some of the most commonly used Pa
 #927840: Add clear-block to dashboard HTML to ensure themes do not do weird things to it.
 #941806: Fix incorrect link to configure mini panel on block config page.
 #869766: Fix occasional problem with flexible layout pushing the entire layout to the left in certain fixed-width only configurations.
+#949310: E_STRICT violation on declaration of render_pane() method of display renderers.
 
 Panels 6.x-3.7 (2010-Jul-26)
 ==============
